--- a/README
+++ b/README
@@ -1,1 +1,2 @@
 Chompy is a dumb little script that adds drilldown to python -mjson.tool.
+Stompy doesn't have drilldown, but instead it namespaces all the keys to make for easier parsing.
